# aws-fpga

./: .gitignore  LICENSE.txt  README.md  implementation_notes.md  sdk_setup.sh  timing_meeting_notes.txt
Vitis/Runtime/: xrt_common_functions.sh
Vitis/aws_platform/: .gitignore
Vitis/examples/: .gitignore
artifact-eval/: README.md
artifact-eval/scripts/: config.py  eval-output.py  figure7.plot.py  figure7.process.py  table1.py  table2.py  utils.py
hdk/cl/examples/cl_3d_rendering/design/: cl_dram_dma.sv  cl_dram_dma_pkg.sv  hls_accel_wrapper.sv
hdk/cl/examples/cl_3d_rendering/software/runtime/: Makefile  test_3d_rendering.c  test_common.c  test_dram_dma_hwsw_cosim.c  typedefs.h
hdk/cl/examples/cl_3d_rendering/verif/scripts/: 3d_rendering.f  Makefile  Makefile.vcs  top.vcs.f
hdk/cl/examples/cl_axi_atop_filter_buggy/: README.md
hdk/cl/examples/cl_axi_atop_filter_buggy/design/: aws_axi_sel.sv  axi_atop_filter_app.sv  axis_fifo_buggy  cl_axi_atop_filter.sv  cl_axi_atop_filter_defines.vh  cl_axi_atop_filter_pkg.sv
hdk/cl/examples/cl_axi_atop_filter_buggy/design/axi_atop_filter/: axi_atop_filter.fixed.sv  axi_atop_filter.sv
hdk/cl/examples/cl_axi_atop_filter_buggy/software/runtime/: Makefile  mutate.sh  run.sh  test_common.c  test_common.h
hdk/cl/examples/cl_axi_atop_filter_buggy/verif/scripts/: Makefile  top.vcs.f
hdk/cl/examples/cl_axis_fifo_buggy/: README.md  losscheck.jtag.ila.tcl
hdk/cl/examples/cl_axis_fifo_buggy/design/: axis_app.sv  axis_fifo.correct.v  axis_fifo.v  axis_fifo_buggy.v  axis_fifo_wrapper.sv  axis_fifo_wrapper_losscheck.sv  bak  cl_axis_fifo.sv  cl_axis_fifo_defines.vh  losscheck_ila.tcl
hdk/cl/examples/cl_axis_fifo_buggy/software/runtime/: Makefile  test_common.c  test_common.h
hdk/cl/examples/cl_axis_fifo_buggy/verif/scripts/: top.vcs.f  waves.tcl
hdk/cl/examples/cl_dram_dma/design/: cl_tst.sv
hdk/cl/examples/cl_dram_dma/verif/scripts/: Makefile.vcs
hdk/cl/examples/cl_fpgarr/: .gitignore  cscope.in.out  cscope.po.out
hdk/cl/examples/cl_fpgarr/design/: axichannel_logger.sv  axichannel_replayer.sv  cl_axi_rr.sv  cl_axil_rr.sv  cl_dma_pcis_slv.sv  cl_dram_dma.sv  cl_dram_dma_axi_mstr.sv  cl_dram_dma_pkg.sv  cl_fpgarr_axi_address_slowing.sv  cl_fpgarr_axi_rr.sv  cl_fpgarr_axil_rr.sv  cl_fpgarr_chgrouping.sv  cl_fpgarr_csrs.sv  cl_fpgarr_dbg.svh  cl_fpgarr_defs.svh  cl_fpgarr_happenbefore_encoder.sv  cl_fpgarr_int_to_pcim.sv  cl_fpgarr_irq_pcim_interconnect.sv  cl_fpgarr_packing.sv  cl_fpgarr_packing_cfg.svh  cl_fpgarr_pcim_interconnect.sv  cl_fpgarr_pkg.sv  cl_fpgarr_rr_sel.sv  cl_fpgarr_rt_loge_crossbar.sv  cl_fpgarr_tracedecoder.sv  cl_fpgarr_tracestorage_axi.sv  cl_fpgarr_tracestorage_decoder.sv  cl_fpgarr_tracestorage_encoder.sv  cl_fpgarr_tracestorage_wrapper.sv  cl_fpgarr_tracestorage_wrapper_writeonly.sv  cl_fpgarr_treegen.py  cl_fpgarr_types.svh  cl_fpgarr_utils.sv  cl_fpgarr_wrapper.sv  cl_fpgarr_writeback.sv  cl_ocl_slv.sv  cl_pcim_mstr.sv  cl_tst.sv  implementation_notes.txt  merged_fifo.sv  (+4 more)
hdk/cl/examples/cl_fpgarr/design/formal/: Makefile  README.md  properties.sv
hdk/cl/examples/cl_fpgarr/design/lib/: ram_fifo_ft.sv  xpm_fifo_sync_wrapper.sim.patch  xpm_fifo_sync_wrapper.sv
hdk/cl/examples/cl_fpgarr/design/scripts/: cl_fpgarr_autogrouping.py  cl_fpgarr_treegen.py  sweep_mergetree.sh
hdk/cl/examples/cl_fpgarr/design/twowayhandshake_logger/: twowayhandshake_logger.sby  twowayhandshake_logger.v
hdk/cl/examples/cl_fpgarr/ip/dbg_fpgarr_pcim_interconnect_ila/: dbg_fpgarr_pcim_interconnect_ila.dcp  dbg_fpgarr_pcim_interconnect_ila.veo  dbg_fpgarr_pcim_interconnect_ila.xci  dbg_fpgarr_pcim_interconnect_ila_stub.v  dbg_fpgarr_pcim_interconnect_ila_stub.vhdl
hdk/cl/examples/cl_fpgarr/ip/dbg_fpgarr_wrapper_ila/: .gitignore  dbg_fpgarr_wrapper_ila.xci
hdk/cl/examples/cl_fpgarr/ip/dbg_ready_replayer_ila/: dbg_ready_replayer_ila.xci
hdk/cl/examples/cl_fpgarr/ip/dbg_trace_split_ila/: dbg_trace_split_ila.dcp  dbg_trace_split_ila.veo  dbg_trace_split_ila.xci  dbg_trace_split_ila_sim_netlist.v  dbg_trace_split_ila_stub.v  dbg_trace_split_ila_stub.vhdl
hdk/cl/examples/cl_fpgarr/ip/dbg_valid_replayer_ila/: dbg_valid_replayer_ila.xci
hdk/cl/examples/cl_fpgarr/ip/fifo_128x128/: fifo_128x128.dcp  fifo_128x128.veo  fifo_128x128.vho  fifo_128x128.xci  fifo_128x128.xml  fifo_128x128_sim_netlist.v  fifo_128x128_sim_netlist.vhdl  fifo_128x128_stub.v  fifo_128x128_stub.vhdl
hdk/cl/examples/cl_fpgarr/ip/rr_cfg_axil_interconnect/: rr_cfg_axil_interconnect.bd  rr_cfg_axil_interconnect.bda  rr_cfg_axil_interconnect.bxml  rr_cfg_axil_interconnect.dcp  rr_cfg_axil_interconnect_sim_netlist.v  rr_cfg_axil_interconnect_sim_netlist.vhdl  rr_cfg_axil_interconnect_stub.v  rr_cfg_axil_interconnect_stub.vhdl
hdk/cl/examples/cl_fpgarr/ip/rr_irq_pcim_interconnect/: rr_irq_pcim_interconnect.bd  rr_irq_pcim_interconnect.bda  rr_irq_pcim_interconnect.bxml  rr_irq_pcim_interconnect.dcp  rr_irq_pcim_interconnect_sim_netlist.v  rr_irq_pcim_interconnect_sim_netlist.vhdl  rr_irq_pcim_interconnect_stub.v  rr_irq_pcim_interconnect_stub.vhdl
hdk/cl/examples/cl_hls/: README.md  Vitis_HLS_2020.2_include.patch
hdk/cl/examples/cl_hls/design/: cl_dma_pcis_slv.sv  cl_dram_dma.sv  cl_dram_dma_defines.vh  cl_ocl_slv_reg.sv  hls_accel_wrapper.sv
hdk/cl/examples/cl_hls/software/runtime/HPCC_FPGA/FFT/src/host/: CMakeLists.txt
hdk/cl/examples/cl_hls/software/runtime/HPCC_FPGA/STREAM/src/host/: CMakeLists.txt  main.cpp  stream_benchmark.cpp  stream_benchmark.hpp
hdk/common/shell_v04261818/design/lib/: flop_fifo.sv
hdk/common/verif/include/: sh_dpi_tasks.svh
hdk/common/verif/models/sh_bfm/: sh_bfm.sv
hdk/common/verif/tb/scripts/: Makefile.common.inc  Makefile.vcs.inc
hdk/common/verif/tb/sv/: tb.sv
sdk/linux_kernel_drivers/xdma/: libxdma.h  xdma_mod.c
sdk/userspace/: mkall_fpga_mgmt_tools.sh
sdk/userspace/fpga_libs/fpga_dma/: fpga_dma_utils.c
sdk/userspace/fpga_libs/fpga_hugealloc/: Makefile  fpga_hugealloc.c  fpga_hugealloc_internal.h
sdk/userspace/fpga_libs/fpga_mgmt/: Makefile
sdk/userspace/include/: fpga_dma.h  fpga_hugealloc.h
(+810 files in other folders)
